# drf_demo

./: pyproject.toml
drf_demo/: init_data.py
drf_demo/demo_html/: index.html  main.js
drf_demo/drf_demo/: custom_authentication.py  serializers.py  settings.py  urls.py  views.py
drf_demo/note/: admin.py  models.py  serializers.py  throttles.py  urls.py  views.py
drf_demo/note/migrations/: 0001_initial.py  0002_alter_workspace_members.py  0003_alter_workspace_members.py  0004_remove_workspace_members_workspacemember.py
