[tool.poetry]
name = "django-rest-framework"
version = "0.1.0"
description = ""
authors = ["Eason_chiang <95297596+class83108@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
psycopg2-binary = "^2.9.9"
load-dotenv = "^0.1.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
